tests/NormalTests/paczka1/fuzzy1/94864710.err
Error in line 1: 8WBOWn9Qr A499 13,5
Error in line 7: endK8 A499 63,0
Error in line 20: WJ09kbZ A78 94,5
Error in line 6: 8WBOWn9Qr S808 99,0
Error in line 25: A78 A78 3,7
Error in line 27: 8WBOWn9Qr A499 96,3
